[gd_scene load_steps=4 format=3 uid="uid://b5fqk2x8bldcc"]

[ext_resource type="Script" path="res://Scripts/container.gd" id="1_taeet"]
[ext_resource type="Texture2D" uid="uid://chjs73ben301y" path="res://Assets/box.png" id="2_n1f4i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jj1p"]
size = Vector2(32, 32)

[node name="Container" type="Area2D"]
script = ExtResource("1_taeet")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0310185, 0.0310185)
texture = ExtResource("2_n1f4i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6jj1p")

[node name="Label" type="Label" parent="."]
z_index = 100
offset_left = 39.0
offset_top = -34.0
offset_right = 79.0
offset_bottom = -11.0

[node name="Panel" type="Panel" parent="."]
offset_left = 41.0
offset_right = 81.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Slot0" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Slot1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonExit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[connection signal="input_event" from="." to="." method="_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
